examples/datalog/18_advanced_patterns/61_running_total.dl
% Test: Running total pattern
% Expected: Sum of values up to current position
% Category: 18_advanced_patterns
% Priority: P2 - Advanced patterns

.kg create test_running_total
.kg use test_running_total

+transactions[(1, 100), (2, 50), (3, 75), (4, 25)].

% Running total: sum of all transactions with ID <= current
running_total(Id, Val, <SUM:V2>) :-
    transactions(Id, Val),
    transactions(Id2, V2),
    Id2 <= Id.

?- running_total(Id, Val, Total).

.kg use default
.kg drop test_running_total
